Update blog url.

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
             <ul class="nav navbar-nav">
               <li><a href="http://mortezaipo.com/index.html"><i class="fa fa-home"></i> Home</a></li>
               <li><a href="http://mortezaipo.com/projects.html">Projects</a></li>
-              <li class="active"><a href="https://mortezaipo.blogspot.com/">Blog</a></li>
+              <li class="active"><a href="http://blog.mortezaipo.com/">Blog</a></li>
               <li><a href="http://mortezaipo.com/links.html">Links</a></li>
               <li><a href="http://mortezaipo.com/about.html">About</a></li>
               <li><a href="http://mortezaipo.com/contact.html">Contact</a></li>
