--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
             <ul class="nav navbar-nav">
               <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
               <li class="active"><a href="projects.html">Projects</a></li>
-              <li><a href="https://mortezaipo.blogspot.com/">Blog</a></li>
+              <li><a href="http://blog.mortezaipo.com/">Blog</a></li>
               <li><a href="links.html">Links</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
