--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title><$BlogPageTitle$></title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <$BlogMetaData$>
+    <link rel="shortcut icon" href="http://blog.mortezaipo.com/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="http://blog.mortezaipo.com/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="http://blog.mortezaipo.com/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rochester|Sacramento" rel="stylesheet">
     <script src="https://use.fontawesome.com/531b387394.js"></script>
