Update home page and menubar issue and projects table.

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
         <div class="col-md-5 menu-bar">
           <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
-              <li><a href="http://mortezaipo.com/index.html"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href="http://mortezaipo.com/index.html">Home</a></li>
               <li><a href="http://mortezaipo.com/projects.html">Projects</a></li>
               <li class="active"><a href="http://blog.mortezaipo.com/">Blog</a></li>
               <li><a href="http://mortezaipo.com/links.html">Links</a></li>
