--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
         <div class="col-md-5 menu-bar">
           <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
-              <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li class="active"><a href="projects.html">Projects</a></li>
               <li><a href="http://blog.mortezaipo.com/">Blog</a></li>
               <li><a href="links.html">Links</a></li>
@@ -62,7 +62,7 @@
               <th class="col-md-1 text-center">Row</th>
               <th class="col-md-2">Name</th>
               <th>Brief Description</th>
-              <th class="col-md-1">Updated</th>                                    
+              <th class="col-md-2">Updated</th>                                    
               <th class="col-md-1">Links</th>
             </thead>
             <tbody>
