--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="col-md-5 menu-bar">
           <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li><a href="projects.html">Projects</a></li>
               <li><a href="http://blog.mortezaipo.com/">Blog</a></li>
               <li><a href="links.html">Links</a></li>
@@ -46,31 +46,14 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="col-md-3 padding-s1 activity-header">C/C++</div>
-            <div class="col-md-9 padding-s1">
-              Designing and implementing high performance services. Developing commercial and enterprise products.
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-6">
             <div class="col-md-3 padding-s1 activity-header">GNU/Linux</div>
             <div class="col-md-9 padding-s1 right-border">
               Creating services and applications for servers and clients. Designing GUI applications.
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="col-md-3 padding-s1 activity-header">Kernel</div>
-            <div class="col-md-9 padding-s1">
-              Research & development on Linux kernel. I'm a new person in this world.
-            </div>
-          </div>
         </div>
       </div>
-      
-      <br>
-      
+
       <h3>Articles on <a href="https://ir.linkedin.com/in/mortezaipo" target="_blank">LinkedIn</a>:</h3>
       <div class="well">
         <div class="row padding-s1">
