--- a/links.html
+++ b/links.html
@@ -25,7 +25,7 @@
         <div class="col-md-5 menu-bar">
           <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
-              <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="projects.html">Projects</a></li>
               <li><a href="http://blog.mortezaipo.com/">Blog</a></li>
               <li class="active"><a href="links.html">Links</a></li>
