--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           I've tested many programming languages and many fields in computer but at the end of each action I
           returned back to this state: Read more about GNU/Linux, C/C++ & Python and implement ideas in them.<br>
           I really love Linux Kernel and even I attended in a course about it. But I'm completely beginner in it.
-          Right now I spend my times on GNU/Linux system & application programming and Linux Kernel R&D topics because these fields are my future and profession.<br>
+          Right now I spend my times on important concepts in software development, GNU/Linux system & application programming and Linux Kernel R&D.<br>
           I try to implement ideas by C/C++ & Python in GNU/Linux platform.<br>
           For more information about my activities please have a look into <strong><a href="cv.html">My Resume</a></strong> page.
           </div>
