Update sidebar and Tags page.

--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Post Tags - Search
-page_menu: Post Tags - Search
+page_menu: Tags
 keywords: ["search", "tags"]
 permalink: /tags/
 ---
