--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,7 @@ title: Post Tags - Search
 page_menu: Tags
 keywords: ["search", "tags"]
 permalink: /tags/
+description: Searching in tags
 ---
 {% capture site_tags %}{% for tag in site.tags %}{{tag|first}}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 
