Update website structure.

--- a/projects.html
+++ b/projects.html
@@ -12,13 +12,14 @@ My open source projects are accessible in my <a alt="My Github page" target="_bl
   <i class="fa fa-exclamation-triangle"></i> &nbsp;<strong>Alert:</strong> Some projects are under construction. So it might that you download a source code which doesn't work fine.
 </div>
 
-<table class="table table-hover" id="projects_list">
+<table class="table table-hover" id="projects-list">
   <thead>
     <th class="td-0 text-center">Row</th>
     <th class="td-2">Name</th>
     <th>Brief Description</th>
     <th class="td-1">Updated</th>                                    
-    <th class="td-1">Links</th>
+    <th class="td-1">Status</th>                                    
+    <th class="td-0">Src</th>
   </thead>
   <tbody>
     <tr id="load">
