--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ description: Brief description about myself
     <p>
     My name is Morteza Nourelahi Alamdari, I'm <i>Senior Software Developer</i>.<br>
     I'm a passionate developer and open source enthusiast with a strong technical 
-    background, especially on C/C++ and Python programming languages and GNU/Linux platform.<br>
+    background, especially on Python programming language and GNU/Linux platform.<br>
     Clean code, well-documented and perfect design are my main concerns.
     </p>
     <p>
@@ -40,10 +40,9 @@ description: Brief description about myself
       <div class="row">
           <div class="col-md-6">
               <ul class="skills">
-                  <li><span class="badge badge-light">C/C++</span></li>
                   <li><span class="badge badge-light">Python</span></li>
+                  <li><span class="badge badge-light">C</span></li>
                   <li><span class="badge badge-light">Bash</span></li>
-                  <li><span class="badge badge-light">Linux Kernel Development</span></li>
                   <li><span class="badge badge-light">Linux Software Development</span></li>
                   <li><span class="badge badge-light">Test-Driven</span></li>
                   <li><span class="badge badge-light">Design Patterns</span></li>
@@ -52,11 +51,12 @@ description: Brief description about myself
           </div>
           <div class="col-md-6">
               <ul class="skills">
+                  <li><span class="badge badge-light">Django, Flask, Tornado</span></li>
                   <li><span class="badge badge-light">REST, SOAP</span></li>
                   <li><span class="badge badge-light">PostgreSQL</span></li>
                   <li><span class="badge badge-light">Redis, Memcached</span></li>
                   <li><span class="badge badge-light">RabbitMQ, ZMQ</span></li>
-                  <li><span class="badge badge-light">KVM, Docker</span></li>
+                  <li><span class="badge badge-light">Docker</span></li>
               </ul>
           </div>
       </div>
