Update resume link.

--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@ description: Brief description about myself
   <div class="col-md-6">
     <p>
     My name is Morteza Nourelahi Alamdari, I'm <i>Senior Software Developer</i>.<br>
-    I'm a passionate developer and open source enthusiast with a strong technical 
+    I'm a passionate developer and open source enthusiast with a strong technical
     background, especially on Python programming language and GNU/Linux platform.<br>
     Clean code, well-documented and perfect design are my main concerns.
     </p>
     <p>
-      <a href="https://www.dropbox.com/s/tcmtfcq77470uxy/Morteza%20Nourelahi%20Alamdari%20-%20Resume.pdf?dl=0" target="_blank" class="btn btn-dark btn-pink">Download Resume</a>
+      <a href="https://www.dropbox.com/s/qzt2ow01qk4oeud/Morteza%20Nourelahi%20Alamdari%20-%20Resume.pdf?dl=0" target="_blank" class="btn btn-dark btn-pink">Download Resume</a>
     </p>
     <p>
       I'm also an active user in these social networks:<br>
@@ -41,7 +41,7 @@ description: Brief description about myself
           <div class="col-md-6">
               <ul class="skills">
                   <li><span class="badge badge-light">Python</span></li>
-                  <li><span class="badge badge-light">C</span></li>
+                  <li><span class="badge badge-light">C/C++</span></li>
                   <li><span class="badge badge-light">Bash</span></li>
                   <li><span class="badge badge-light">Linux Software Development</span></li>
                   <li><span class="badge badge-light">Test-Driven</span></li>
