Update website headers

--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Morteza NourelahiAlamdari</title>
+
+    <meta name="author" content="Morteza NourelahiAlamdari">
+    <meta name="description" content="Senior Software Developer">
+    <meta name="keywords"
+          content="programmer,programming,developer,engineer,code,source,python,linux,gnu,c,c++,python,tools">
+
+    <meta property="org:site_name" content="Morteza NourelahiAlamdari"/>
+    <meta property="org:url" content="https://0t1.me"/>
+    <meta property="org:type" content="website"/>
+    <meta property="org:title" content="Morteza NourelahiAlamdari"/>
+    <meta name="description" content="Senior Software Engineer">
 
     <style>
-        @font-face {font-family: 'hack'; src: url("Hack-Regular.ttf");}
+        @font-face {
+            font-family: 'hack';
+            src: url("Hack-Regular.ttf");
+        }
 
         body {
             background-color: #00283c;
             color: #4caf50;
-            margin-top:250px;
+            margin-top: 250px;
         }
 
         #title pre {
@@ -39,7 +53,11 @@
 88  88  88 88    88 88`8b      88    88~~~~~   d8'   88~~~88
 88  88  88 `8b  d8' 88 `88.    88    88.      d8' db 88   88
 YP  YP  YP  `Y88P'  88   YD    YP    Y88888P d88888P YP   YP
-<a title="Resume" href="https://github.com/mortezaipo/resume/releases/download/latest/resume.pdf" target="_blank">Resume</a> - <a title="Github" href="https://github.com/mortezaipo" target="_blank">Github</a> - <a title="LinkedIn" href="https://www.linkedin.com/in/morteza-nourelahi-alamdari/" target="_blank">LinkedIn</a> - <a title="Twitter" href="https://twitter.com/mortezaipo" target="_blank">Twitter</a>                <a title="Email" href="mailto:m@0t1.me">m@0t1.me</a>
+<a title="Resume" href="https://github.com/mortezaipo/resume/releases/download/latest/resume.pdf"
+   target="_blank">Resume</a> - <a title="Github" href="https://github.com/mortezaipo" target="_blank">Github</a> - <a
+                title="LinkedIn" href="https://www.linkedin.com/in/morteza-nourelahi-alamdari/"
+                target="_blank">LinkedIn</a> - <a title="Twitter" href="https://twitter.com/mortezaipo" target="_blank">Twitter</a>                <a
+                title="Email" href="mailto:m@0t1.me">m@0t1.me</a>
         </pre>
     </div>
 </div>
