Update body background color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         body {
-            background-color: #00283c;
+            background-color: #001b29;
             color: #4caf50;
             margin-top: 250px;
         }
